--- a/css/styles-studio.css
+++ b/css/styles-studio.css
@@ -69,46 +69,25 @@ body {
 .list-button:hover,
 .list-button:focus {
   color: var(--text-accent);
-  color: ;
 }
 
-.title {
+.item {
   font-weight: 700;
-  font-size: 14px;
-  line-height: 1.143;
-  text-transform: uppercase;
-  color: var(--primary-text-black);
+  font-size: 18px;
+  line-height: 2;
+  letter-spacing: 0.06em;
 }
 
-.section-title {
-  font-weight: 700;
-  font-size: 36px;
-  line-height: 1.166;
-  text-align: center;
-  color: var(--primary-text-black);
-}
-
-.description {
-  font-size: 14px;
-  line-height: 1.71;
-  color: var(--primary-text-gray);
-}
-
-.team-item {
-  font-weight: 500;
+.item-description {
   font-size: 16px;
-  line-height: 1.187;
+  line-height: 1.87;
+  letter-spacing: 0.03em;
 
-  text-align: center;
-  color: var(--primary-text-black);
-}
-
-.team-item .description {
-  font-weight: normal;
   color: var(--primary-text-gray);
 }
 
 .footer {
+  font-style: normal;
   font-size: 14px;
   line-height: 1.71;
   background-color: var(--background-hero);
