--- a/css/styles.css
+++ b/css/styles.css
@@ -55,17 +55,19 @@ body {
 .list {
   list-style: none;
 }
-.hero {
-  font-weight: 900;
-  font-size: 44px;
-  line-height: 1.36;
 
+.hero {
+  color: var(--white);
+  background-color: var(--background-hero);
   text-align: center;
   letter-spacing: 0.06em;
   text-transform: uppercase;
+}
 
-  color: var(--white);
-  background-color: var(--background-hero);
+.hero-title {
+  font-weight: 900;
+  font-size: 44px;
+  line-height: 1.36;
 }
 
 .hero-button {
@@ -74,8 +76,6 @@ body {
   font-size: 16px;
   line-height: 1.87;
 
-  text-align: center;
-  letter-spacing: 0.06em;
   color: var(--white);
   background-color: var(--text-accent);
 }
